apps/base/servarr/radarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  labels:
    app.kubernetes.io/name: radarr
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: radarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: radarr
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - image: ghcr.io/linuxserver/radarr:version-5.19.3.9730
          imagePullPolicy: Always
          name: radarr
          ports:
            - containerPort: 7878
              name: http
          readinessProbe:
            httpGet:
              path: /ping
              port: 7878
            initialDelaySeconds: 10
            periodSeconds: 15
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: 1500m
              memory: 2048Mi
          securityContext:
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /data
            - name: booleans
              mountPath: /tmp
      volumes:
        - name: config
          emptyDir: {}
        - name: booleans
          emptyDir: {}
        - name: media
          persistentVolumeClaim:
            claimName: media
