apps/base/servarr/radarr/servicemonitor.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: radarr-exporter
  labels:
    app.kubernetes.io/name: radarr-exporter
    app.kubernetes.io/instance: radarr-exporter
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: radarr-exporter
    app.kubernetes.io/instance: radarr-exporter
  ports:
    - name: monitoring
      port: 9707
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: radarr-exporter
  labels:
    app.kubernetes.io/name: radarr-exporter
    app.kubernetes.io/instance: radarr-exporter
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: radarr-exporter
      app.kubernetes.io/instance: radarr-exporter
  template:
    metadata:
      labels:
        app.kubernetes.io/name: radarr-exporter
        app.kubernetes.io/instance: radarr-exporter
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "monitoring"
    spec:
      containers:
        - name: radarr-exporter
          image: ghcr.io/onedr0p/exportarr:v2.0.1
          imagePullPolicy: IfNotPresent
          args:
            - radarr
          ports:
            - name: monitoring
              containerPort: 9707
          livenessProbe:
            httpGet:
              path: /healthz
              port: monitoring
            failureThreshold: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: monitoring
            failureThreshold: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 256Mi
